--- a/sl-gallery-image.html
+++ b/sl-gallery-image.html
@@ -83,6 +83,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           small: String,
           title: String,
           caption: String,
+          isPanoramic: Boolean
         };
       }
 
