Fixed image flashing.

--- a/sl-gallery-slideshow.html
+++ b/sl-gallery-slideshow.html
@@ -445,6 +445,10 @@
 				document.removeEventListener('fullscreenchange', this._fullscreenChanged);
 			}
 
+			clean() {
+				this._images = [];
+			}
+
 			_handleKeydown(event) {
 				if (event.keyCode === 27) { // ESC
 
