Fix image reloading.

--- a/sl-gallery-slideshow.html
+++ b/sl-gallery-slideshow.html
@@ -666,6 +666,7 @@
 				this._imageSrc = '';
 				this.opened = false;
 				this.gallery.index = null;
+				this.gallery._images = null;
 
 				this._spinnerActive = false;
 
